@@ -1,5 +1,4 @@
-/* $Id: listener.c,v 1.8 2009/06/27 22:30:23 ralf Exp $
- *
+/*
  * Copyright (c) 1996 Joerg Reuter (jreuter@poboxes.com)
  *
  * This program is free software; you can redistribute it and/or modify
@@ -139,7 +138,7 @@ int set_arp(config * config, long ip, ax25_address * call)
 
 	fds = socket(AF_INET, SOCK_DGRAM, 0);
 
-	memset((char *) &arp, 0, sizeof(arp));
+	memset(&arp, 0, sizeof(arp));
 
 	isa = (struct sockaddr_in *) &arp.arp_pa;
 	asa = (struct sockaddr_ax25 *) &arp.arp_ha;
@@ -230,12 +229,12 @@ int set_route(config * config, long ip)
 	if (!config->ip_add_route)
 		return 0;
 
-	if (iproute2_table && *iproute2_table)
+	if (*iproute2_table)
 		return iproute2(ip, config->dev, RT_ADD);
 
 	fds = socket(AF_INET, SOCK_DGRAM, 0);
 
-	memset((char *) &rt, 0, sizeof(rt));
+	memset(&rt, 0, sizeof(rt));
 
 	isa = (struct sockaddr_in *) &rt.rt_dst;
 
@@ -276,12 +275,12 @@ int del_kernel_ip_route(char *dev, long ip)
 	if (config == NULL || !config->ip_add_route)
 		return 0;
 
-	if (iproute2_table && *iproute2_table)
+	if (*iproute2_table)
 		return iproute2(ip, dev, RT_DEL);
 
 	fds = socket(AF_INET, SOCK_DGRAM, 0);
 
-	memset((char *) &rt, 0, sizeof(struct rtentry));
+	memset(&rt, 0, sizeof(struct rtentry));
 
 	isa = (struct sockaddr_in *) &rt.rt_dst;
 
